1999-07-22  Jeffrey Altman <jaltman@columbia.edu>

        get_in_tkt.c:  rename conf_boolean to krb5_conf_boolean so that
        it may be used in additional modules.

1999-06-28  Tom Yu  <tlyu@mit.edu>

	* enc_helper.c (krb5_encrypt_helper): NULL out the pointer to the
	ciphertext if there is an error; this prevents stuff farther up
	from freeing freed memory.

1999-06-18  Ken Raeburn  <raeburn@mit.edu>

	* init_ctx.c (krb5_free_context): Set field pointers to NULL after
	freeing targets, in case higher-level code retains pointers into
	the context structure.  (From Jeffrey Altman.)

Thu May 13 17:31:34 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* init_ctx.c (krb5_init_context): Pass the context to
		kkrb5_win_ccdll_load so that it can register the FILE
		ccache type if using ccapi (so that the FILE ccache type
		will always work).

Mon May 10 15:26:00 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Do win32 build in subdir.

1999-04-09  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* kfree.c (krb5_free_sam_challenge, krb5_free_sam_challenge_contents,
		krb5_free_sam_response, krb5_free_sam_response_contents,
		krb5_free_predicted_sam_response, 
		krb5_free_predicted_sam_response_contents,
		krb5_free_enc_sam_response_enc, 
		krb5_free_enc_sam_response_enc_contents,
		krb5_free_pa_enc_ts): Added new functions.  Part of
		patches from [krb5-kdc/662]

	* gic_pwd.c (krb5_get_init_creds_password): Add new argument to
		calls to the prompter function.  Part of patches from
		[krb5-kdc/662].

	* preauth2.c (pa_enc_timestamp, pa_sam): Update calls to new
		prompter function.   [krb5-kdc/662].

1999-03-31  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* init_ctx.c (krb5_init_context): Call krb5_win_ccdll_load() to
		load the krbcc32.dll under windows.

Mon Mar  8 22:39:01 1999  Tom Yu  <tlyu@mit.edu>

	* sendauth.c (krb5_sendauth): Set credspout to NULL if it's
	destined to be returned to avoid freeing it.  Also,